--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.accubits.mvvm_starter">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".BaseApplication"
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mvvmstarter">
+        <activity android:name=".views.activities.OTPActivity"></activity>
         <activity android:name=".views.activities.SplashActivity" />
         <activity android:name=".views.activities.RegistrationActivity" />
         <activity android:name=".views.activities.LoginActivity" />
